networkpolicy/network-policy/network-policy-allow/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox1
  namespace: demo-namespace
  labels:
    app: busybox
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
