networkpolicy/network-policy/network-policy-allow/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx1
  namespace: demo-namespace
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
